# vantage

./: .gitignore  DOCS.md  README.md  eval_torch.bat  pyproject.toml  requirements.txt  run_gpu_training.bat
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  VANTAGE_Drone_Project_Plan.docx
realsim/: 00_RUNBOOK.md  README.md  check_wsl.sh  fly_mission.py  install_px4_gazebo.sh  run_sim.sh
results/: phase1_metrics.csv  phase1_metrics.md  phase2_metrics.csv  phase2_metrics.md  phase3_curve.csv  phase3_metrics.csv  phase3_metrics.md  phase3_policy.npz  phase3_policy_torch.pt  phase3_torch_eval.txt  phase4_mission_report.json
scripts/: phase1_hover.py  phase2_planning_benchmark.py  phase3_benchmark.py  phase3_eval_torch.py  phase3_train.py  phase3_train_torch.py  phase4_mission.py  run_all_benchmarks.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
vantage/control/: geometric.py
vantage/missions/: mission.py
vantage/planning/: astar.py  follow.py  rrt_star.py
vantage/rl/: avoidance_env.py  ppo.py
vantage/sim/: quadrotor.py  world.py
vantage/utils/: metrics.py  report.py
