[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vantage"
version = "0.1.0"
description = "VANTAGE — sim-first autonomous drone stack (perception/estimation/planning/control + RL)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["numpy>=1.26","scipy>=1.11","matplotlib>=3.8","gymnasium>=0.29","imageio>=2.34"]

[project.optional-dependencies]
gpu = ["torch>=2.2"]

[tool.setuptools.packages.find]
include = ["vantage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
